--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+src/main/resources/.env
+jobResults.json
 # Created by https://www.gitignore.io/api/java,kotlin,gradle,intellij+all
 # Edit at https://www.gitignore.io/?templates=java,kotlin,gradle,intellij+all
 
